--- a/templates/creator_dashboard.html
+++ b/templates/creator_dashboard.html
@@ -24,10 +24,10 @@
         <div class="profile-dropdown">
           <img src="{{ url_for('static', filename='images/profile.png') }}" class="profile-img" alt="Profile"/>
           <div class="dropdown-content">
-            <a href="#">Account</a>
+            <a href="#">Profile</a>
             <a href="#">Notification</a>
             <a href="#">Wallet</a>
-            <a href="#">Profile</a>
+            <a href="#">Portfolio</a>
             <a href="{{ url_for('logout') }}">Logout</a>
           </div>
         </div>
